--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <small>© <span id="year"></span> Your Company</small>
+    <small>© <span id="year"></span> OsintDynamics</small>
   </main>
 
   <script>
@@ -102,3 +102,4 @@
   </script>
 </body>
 </html>
+
